# complex_yolo_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
data/KITTI/ImageSets/: KODAS_1.txt
launch/: complex_yolov3.launch
msg/: DetectedObject.msg
scripts/: complex.py  complex_yolo_node.py  models.py  test_detection.py
scripts/utils/: kitti_dataset.py  kitti_yolo_dataset.py  utils.py
